# notes

./: .gitignore  pyproject.toml
notes/: main.py
notes/actions/: csu.py
notes/alembic/: env.py
notes/alembic/versions/: 2024_11_17_2214-44fe1431eee5_create_tables_notes_tags_and_.py  2024_11_26_1559-711ee1421775_create_users_table.py  2024_12_04_0828-942507cb10bf_add_owner_to_note.py
notes/config/: config.py  database.py
notes/core/: __init__.py  base.py  config.py  database.py
notes/notices/: crud.py  dependencies.py  models.py  routers.py  schemas.py
notes/users/: README.md  auth_backend.py  dependencies.py  models.py  routers.py
notes/users/models/: user.py  user_manager.py
